--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,5 @@ jobs:
 
       - name: Push to hub
         env:
-          HF_TOKEN: ${{ github.token }}
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: git push --force https://genaitiwari:$HF_TOKEN@huggingface.co/spaces/ezuezu/agenticai main
